Fix focus / link issue where flex items stretch full width
I think the default is `stretch` https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/align-items#:~:text=For%20flex%20items%2C%20the%20keyword%20behaves%20as%20stretch.

The `flex-start` setting, according to MDN - 'Used in flex layout only, aligns the flex items flush against the flex container's main-start or cross-start side.' which fixes the full width appearance otherwise.

--- a/app/assets/stylesheets/govuk_publishing_components/components/_big-number.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_big-number.scss
@@ -3,6 +3,7 @@
   @include govuk-text-colour;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
 }
 
 .gem-c-big-number__value {
